Fixed the display in the day and week views so that if there are timeslots that have more than one booking then the table is still displayed properly.    Although normally it is not possible to have more than one booking in a timeslot, it can occur if (a) the resolution is increased, (b) the display day is shifted, or (c) bookings were made before Revision 1040 and the booking was not aligned to a timeslot.
Cells with more than one booking are now displayed as a mini table that can be maximised to see the details of the bookings.

--- a/web/mrbs-ielte6.css
+++ b/web/mrbs-ielte6.css
@@ -14,6 +14,14 @@ div.cell_container {height: 100px}           /* NOTE:  if you change the value o
                                              /* also change the value of min-height in mrbs.css.php */
 div.booking_list {overflow: visible}         /* scrollbars don't work properly in IE6, so forget them and just let the cell expand*/
 
+/* We don't want the controls for multiple bookings for IE6, because they rely on div:hover working   */
+/* which is not supported by IE6.   So reverse the JavaScript overrides and just treat IE6 as though  */
+/* JavaScript was disabled.                                                                           */
+div.multiple_control {display: none}
+.multiple_booking .maxi a {padding-left: 2px}
+.minimized div.mini {display: none}   /* Ignore the minimized class and always display the maxi table */
+.minimized div.maxi {display: block}
+
 /* ------------ EDIT_AREA_ROOM.PHP ------------------*/
 .form_edit_area_room label {height: 2.0em}   /* min-height not recognised by IE6 and below */
 
